@@ -6,3 +6,17 @@
 * Anh-Tuan Nguyen - 40177349 (anhtuann)
 * Kevin Phan - 40097439 (kevphn)
 * Sabari Krishna Orakkan - 40079144 (SKrishna791)
+
+# How To Run
+***NOTE: For the best perfomance please use the IntelliJ IDEA IDE.***  
+Ignore steps 2 and 3 if there are no compiling errors.  
+  
+1. Open the SmartHomeSimulator folder in your IDE.
+2. Add json-simple-1.1.jar to the class path of the IDE. (Contained in src/ThirdPartyLibs)
+3. Add javafx-sdk-21.0.2/lib to the class path of the IDE. (Contained in src/ThirdPartyLibs)
+5. In the run configurations of the IDE, add vm options and add the following:  
+   --module-path "PATH-TO-JAVAFX-LIB" --add-modules javafx.controls,javafx.fxml
+7. Run the program.
+
+# Testing Files
+All testing is done in [SmartHomeSimulator/src/Test](SmartHomeSimulator/src/Test)
